--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=testproject 
 
-spring.datasource.url = jdbc:postgresql://localhost:5432/TestProject
-spring.datasource.username = postgres
-spring.datasource.password = sam2510
+#spring.datasource.url = jdbc:postgresql://postgres:5432/GigProject
+# spring.datasource.url = jdbc:postgresql://localhost:5432/TestProject
+# spring.datasource.username = postgres
+# spring.datasource.password = sam2510
 
 spring.jpa.hibernate.ddl-auto=update
 server.error.include-message = always
